css/hhss.css
/* ... */
body {
    background-color: ivory;
    color: #243466;
    font-size: 18px;
    line-height: 1.42857143;
    margin: 0;
    position: relative;
}

html, body {
    height: 100vh;
}

/*================NAV============*/
#nav {
    display: none;
}

/*===================FOOTER===========*/
.cr {
    padding-left: 3px;
    position: absolute;
}

/*==========================================================================================
    HOME PAGE FROM 0PX
============================================================================================*/
/* #home {
    background-color: #e05e26;
    height: 110%;
    width: auto;
}

.cover {
    align-content: center;
    justify-content: center; */
    /* max-height: -moz-calc(100vh - 200px);
    max-height: -webkit-calc(100vh - 200px); */
    /* max-height: calc(100vh - 400px); */
    /* max-height: 740px; */
    /* width: calc(100vw - 200px); was 100vw-100px */
    /*border-bottom: 30px solid #e05e26;*/
    /* margin-top: -10%;
} */

.nalo {
    display: none;
}

.smolcoverbox {
    align-content: center;
    align-items: center;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: .25fr .25fr;
    height: 70%;
    justify-content: center;
    justify-items: center;
    margin: auto;
    max-width: 310px;
    padding-top: 25%;
    row-gap: 5px;
    width: auto;
}

.hulalogo {
    grid-area: 2 / 1 / 3 / 2;
    margin: 0 20%;
}

.hhlogo {
    grid-area: 1 / 1 / 2 / 2;
}

.smolcoverbox img {
    /* height: calc(100% - 30%); */
    height: 80%;
    width: auto;
}

img.hhlogo {
    height: auto;
    width: 80vw;
}

img.hulalogo {
    height: auto;
    width: 10vw;
}

/*=================BLURB==============*/
.blurbbox p {
    font-size: 20px;
}

.blurbbox h1 {
    font-size: 30px;
}

.blurbbox {
    background-color: ivory;
    position: relative;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr .2fr;
    margin-top: 80px;
    overflow: visible;
}

.blurbtext1 { grid-area: 1 / 1 / 2 / 2; padding: 5vw 0 5vw 5vw; }
.blurbtext2 { grid-area: 1 / 2 / 2 / 3; padding: 5vw; }
.blurblink { grid-area: 2 / 1 / 3 / 3;
    padding-right: 5vw;
    justify-self: end;
}

.blurblink a {
    border: 2px solid #243466;
    color: #243466;
    padding: 15px;
    text-decoration: none;
}

/*============ADS===============*/
.adbox {
    background-color: ivory;
    width: 100vw;
    position: relative;
}

.adclothes, .adhomegoods {
    margin-bottom: 8vw;
}

/*=============ADCLOTHES============*/
.adclothes {
    align-items: center;
    display: grid;
    grid-template-columns: 1fr .25fr;
    grid-template-rows: .25fr .3fr .25fr;
    height: auto;
    justify-items: center;
    column-gap: 5vw;
    width: 90vw;
}

.clothesimg {
    grid-area: 1 / 1 / 4 / 2;
    height: auto;
    width: 60vw;
}

.clothesh2 {
    border: 4px solid #243466;
    grid-area: 2 / 2 / 3 / 3;
    height: 20vw;
    width: 20vw;
}

.clothesh2 a {
    color: #243466;
    display: flex;
    font-size: 3vw;
    font-weight: 600;
    /* margin: 8vw auto; */
    padding: 29% 3%;
    text-align: center;
    text-decoration: none;
}

/*====================ADHOMEGOODS===============*/
.adhomegoods {
    align-items: center;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: .75fr;
    height: auto;
    justify-items: center;
    width: 90vw;
}

.box1, .box2, .box3, .box4, .box5 {
    height: 15vw;
    width: 15vw;
}

.box1 { 
    background: url(./images/shopcats/Monkey_Pod___Koa-removebg-preview\ \(1\).png) center center no-repeat;
    background-size: contain;
    grid-area: 1 / 1 / 2 / 2;
    position: relative;
}
.box2 { 
    background: url(./images/shopcats/Etched_Glass-removebg-preview.png) center center no-repeat;
    background-size: contain;
    grid-area: 1 / 2 / 2 / 3;
    position: relative;
}
.box3 { 
    border: 4px solid #243466;
    display: block;
    grid-area: 1 / 3 / 2 / 4;
    position: relative;
}
.box3 a {
    color: #243466;
    display: flex;
    font-size: 2vw;
    font-weight: 600;
    padding: 22% 3%;
    text-align: center;
    text-decoration: none;
}

.box4 { 
    background: url(./images/shopcats/California_Pottery-removebg-preview.png) center center no-repeat;
    background-size: contain;
    grid-area: 1 / 4 / 2 / 5;
    position: relative;
}
.box5 { 
    background: url(./images/shopcats/Funky_Mix-removebg-preview.png) center center no-repeat;
    background-size: contain;
    grid-area: 1 / 5 / 2 / 6;
    position: relative;
}

.abox {
    background-color: ivory;
    border: 4px solid #243466;
    display: block;
    height: 13vw;
    left: 50%;
    opacity: 0;
    position: absolute;
    text-align: center;
    top: 50%;
    transform: translate(-50%, -50%);
    transition: .5s ease;
    width: 13vw;
}

.abox:hover {
    opacity: 1;
}

.box1 a, .box2 a, .box4 a, .box5 a {
    color: #243466;
    display: flex;
    font-size: 2vw;
    font-weight: 600;
    position: absolute;
    text-align: center;
    text-decoration: none;
}

.box1 a {
    padding: 18% 3%;
}

.box2 a {
    padding: 39% 12%;
}

.box4 a, .box5 a {
    padding: 28% 0;
}

/*==============ADQUILTS================*/
.adquilts {
    align-items: center;
    display: grid;
    grid-template-columns: .25fr 1fr;
    grid-template-rows: .25fr .3fr .25fr;
    height: auto;
    justify-items: center;
    column-gap: 5vw;
    width: 90vw;
}

.quiltsimg {
    grid-area: 1 / 2 / 4 / 3;
    height: auto;
    width: 60vw;
}

.quiltsh2 {
    border: 4px solid #243466;
    grid-area: 2 / 1 / 3 / 2;
    height: 20vw;
    width: 20vw;
}

.quiltsh2 a {
    color: #243466;
    display: flex;
    font-size: 3vw;
    font-weight: 600;
    /* margin: 8vw auto; */
    padding: 7% 3%;
    text-align: center;
    text-decoration: none;
}

/*==============FOOTER================*/
.foot {
    position: relative;
    justify-self: start;
}

.foot small.cr {
    width: 300px;
}
/* ... */

